[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdfshell"
version = "1.0.0"
description = "SDFShell - SDF.org COM Chat Channel for nanobot"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "YKaiXu", email = "yukaixu@outlook.com"}
]
keywords = ["nanobot", "ssh", "sdf", "com", "chat", "paramiko-expect", "pyte"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "paramiko>=3.0.0",
    "paramiko-expect>=0.3.5",
    "pyte>=0.8.0",
]

[project.optional-dependencies]
nanobot = ["nanobot>=0.1.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0"]

[project.urls]
Homepage = "https://github.com/YKaiXu/sdfshell"
Repository = "https://github.com/YKaiXu/sdfshell"
Issues = "https://github.com/YKaiXu/sdfshell/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdfshell", "sdfshell.*"]

[tool.setuptools.package-data]
"*" = ["SKILL.md", "README.md"]
